covergo-test/manifests/nginx1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx1-service
spec:
  selector:
    app: nginx1
  ports:
    - protocol: TCP
      port: 8282
      targetPort: 8282
